Add output folder option
Signed-off-by: NSV <1151965+NSV@users.noreply.github.com>